# rx-state

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: cd.yml
crates/rx-derive/: Cargo.toml  README.md
crates/rx-derive/src/: lib.rs
crates/rx-derive/src/rx_collections/: mod.rs  rx_hash_map.rs  rx_vec.rs
crates/rx-macro/: Cargo.toml
crates/rx-macro/src/: README.md  lib.rs  rx_state.rs
crates/rx-macro/src/snapshots/: rx_macro__expand_derive.snap  rx_macro__expand_nest.snap
crates/rx-macro/tests/: compile.rs
faq/dev/: how_to_use_git_submodule.md
src/: config.rs  main.rs
tests/: e2e_tests.rs  integration_tests.rs
