[workspace.package]
version = "0.1.0"
authors = ["huang12zheng <805104533@qq.com>"]
edition = "2021"
description = ""
repository = "https://github.com/huang12zheng/rx-state"
license = "MIT"
keywords = ["rx-state"]

publish = true # no accidents while in dev

[workspace]
members = ["crates/*"]
resolver = "2"
