[package]
name = "rx-derive"
authors.workspace = true
edition.workspace = true
# homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_reactive = { version = "*", optional = true }
serde = { version = "*", optional = true, features = ["derive"] }
[dev-dependencies]

[features]
default = ["leptos"]
leptos = ["dep:leptos_reactive"]
serde = ["dep:serde"]
