[package]
name = "rx-derive"
authors.workspace = true
edition.workspace = true
description = "utils for schema style rx"
# homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# leptos_reactive = { version = "*", optional = true }
leptos_reactive = { git = "https://github.com/leptos-rs/leptos.git", branch = "effect-cleanups", optional = true }

serde = { version = "*", optional = true, features = ["derive"] }
[dev-dependencies]

[features]
default = ["leptos"]
leptos = ["dep:leptos_reactive"]
serde = ["dep:serde"]
